search styles fix

--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,6 +1,7 @@
 .root {
     position: relative;
-    left: -120px;
+    width: 400px;
+    margin: 0 auto;
 }
 
 .input {
@@ -14,7 +15,6 @@
 
     &:focus {
         border: 1px solid rgba(0, 0, 0, 0.3);
-        // width: 450px;
     }
 }
 
@@ -23,9 +23,8 @@
     height: 22px;
     opacity: 0.3; 
     position: absolute;
-    left: 14px;
+    left: 30px;
     top: 12px;
-   
 }
 
 .close {
@@ -33,7 +32,7 @@
     height: 18px;
     opacity: 0.3;
     position: absolute;
-    right: 15px;
+    right: 30px;
     top: 15px;
     cursor: pointer;
 
