--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,6 +1,7 @@
 .root {
     position: relative;
-    width: 400px;
+    width: 100%;
+    max-width: 400px;
     margin: 0 auto;
 }
 
@@ -8,7 +9,9 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 12px 20px;
     padding-left: 42px;
-    width: 300px;
+    width: 100%;
+    
+    box-sizing: border-box;
     border-radius: 10px;
     font-size: 16px;
     transition: all 0.15s ease-in-out;
@@ -23,7 +26,7 @@
     height: 22px;
     opacity: 0.3; 
     position: absolute;
-    left: 30px;
+    left: 10px;
     top: 12px;
 }
 
